# InspectorBaxter

./: 495-final-functionality.odt  CMakeLists.txt  MECH-495-project.md  MECH-495-project.txt~  README.md  np  package.xml  rospy
launch/: baxter_speech.launch  master_launch.launch  move_baxter.launch  pcl_extract.launch
misc/: MECH-495-project.md
msg/: .#PclData.msg  ObjectList.msg  ObjectName.msg  PclData.msg  Pcl_Update.msg  State.msg  Update.msg
rviz/: rvizConfig.rviz
src/: baxter_speech.py  cluster_extractor.cpp  master.py  move_neutral.py  pcl_transform.py  pick_up.py  test.py  test2.py
vocab/: voice_cmd.dic  voice_cmd.kwlist
