<?xml version="1.0"?>
<package format="2">
  <name>inspector</name>
  <version>1.0.0</version>
  <description>The Inspector Baxter package</description>

  <maintainer email="srikanth@todo.todo">srikanth</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libpcl1-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>libpcl1-dev</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>libpcl1</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>

  
  <export>
  </export>
</package>
